--- a/LMS-M/assets/css/visco/visco_slide_min.css
+++ b/LMS-M/assets/css/visco/visco_slide_min.css
@@ -2,7 +2,11 @@
 
 /* Main CSS END */
 
-/* 슬라이드 */
+
+
+
+
+/* 슬라이드
 .swiper-pagination-bullet{border: 1px solid #1da1f2;}.swiper-pagination-bullet-active{background:#1da1f2}
 img:not([draggable]), embed, object, video {max-width: 100%;height: auto;}
 
@@ -33,7 +37,7 @@ img:not([draggable]), embed, object, video {max-width: 100%;height: auto;}
 .swiper-button-prev {position: absolute;top: 50%;width: 27px;height: 44px;margin-top: -22px;z-index: 10;cursor: pointer;background-size: 27px 44px;background-position: center;background-repeat: no-repeat;}
 
 .swiper-button-next.swiper-button-disabled,
-.swiper-button-prev.swiper-button-disabled {opacity: .35;cursor: auto;pointer-events: none}
+.swiper-button-prev.swiper-button-disabled {opacity: .35;cursor: auto;pointer-events: none;}
 
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23007aff'%2F%3E%3C%2Fsvg%3E");left: 10px;right: auto}
@@ -58,17 +62,17 @@ img:not([draggable]), embed, object, video {max-width: 100%;height: auto;}
 
 .swiper-container-horizontal>.swiper-pagination-bullets,
 .swiper-pagination-custom,
-.swiper-pagination-fraction {bottom: 10px;left: 0;width: 100%}
+.swiper-pagination-fraction {bottom: 10px;left: 0;width: 100%;}
 
 .swiper-pagination-bullet {width: 8px;height: 8px;display: inline-block;border-radius: 100%;background: #000;opacity: .2}
-button.swiper-pagination-bullet {border: none;margin: 0;padding: 0;box-shadow: none;-moz-appearance: none;-ms-appearance: none;-webkit-appearance: none;appearance: none}
+button.swiper-pagination-bullet {border: none;margin: 0;padding: 0;box-shadow: none;-moz-appearance: none;-ms-appearance: none;-webkit-appearance: none;appearance: none;}
 
 .swiper-pagination-clickable .swiper-pagination-bullet {cursor: pointer}
 .swiper-pagination-white .swiper-pagination-bullet {background: #fff}
 .swiper-pagination-bullet-active {opacity: 1;background: #007aff}
 .swiper-pagination-white .swiper-pagination-bullet-active {background: #fff}
 .swiper-pagination-black .swiper-pagination-bullet-active {background: #000}
-.swiper-container-vertical>.swiper-pagination-bullets {right: 10px;top: 50%;-webkit-transform: translate3d(0, -50%, 0);transform: translate3d(0, -50%, 0)}
+.swiper-container-vertical>.swiper-pagination-bullets {right: 10px;top: 50%;-webkit-transform: translate3d(0, -50%, 0);transform: translate3d(0, -50%, 0);opacity: 0;}
 .swiper-container-vertical>.swiper-pagination-bullets .swiper-pagination-bullet {margin: 5px 0;display: block}
 .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {margin: 0 5px}
 .swiper-pagination-progress {background: rgba(0, 0, 0, .25);position: absolute}
@@ -173,5 +177,5 @@ button.swiper-pagination-bullet {border: none;margin: 0;padding: 0;box-shadow: n
 .swiper-pagination-fraction {bottom: 0;}
 
 .swiper-pagination-bullet {background: transparent none repeat scroll 0 0;border: 1px solid #ee0f6f;border-radius: 10px;display: inline-block;height: 10px;opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";width: 26px;-webkit-transition: 0.2s;transition: 0.2s;}
-.swiper-pagination-bullet-active {background: rgba(0, 0, 0, 0) -webkit-linear-gradient(left, #ee0f6f 0%, #f89482 100%) repeat scroll 0 0;background: rgba(0, 0, 0, 0) linear-gradient(to right, #ee0f6f 0%, #f89482 100%) repeat scroll 0 0;border: medium none;height: 12px;opacity: 1;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";width: 12px;}
-/* 슬라이드 END */
+.swiper-pagination-bullet-active {background: rgba(0, 0, 0, 0) -webkit-linear-gradient(left, #ee0f6f 0%, #f89482 100%) repeat scroll 0 0;background: rgba(0, 0, 0, 0) linear-gradient(to right, #ee0f6f 0%, #f89482 100%) repeat scroll 0 0;border: medium none;height: 12px;opacity: 0;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";width: 12px;}
+슬라이드 END */
